--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "dev": "vite",
+    "dev:server": "NODE_ENV=development tsx watch server/index.ts",
+    "dev:vercel": "vercel dev",
+    "build:client": "vite build",
+    "build:api": "echo 'API built by Vercel'",
+    "migrate": "tsx migrate.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:seed": "tsx server/db-seed.ts",
+    "build": "npm run migrate && npm run build:client",
+    "start": "NODE_ENV=production node server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@vercel/node": "^3.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
@@ -77,6 +85,7 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@vercel/node": "^3.1.7",
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
